hard-code --enable-preview for single file source launcher